# swayvkshot

./: README.md  meson.build  swayvkshot.c  swayvkshot.h
.cache/clangd/index/: swayvkshot.c.8585CD8A1AF4D036.idx  swayvkshot.h.12FF95F16E5AA54F.idx
